# uav_inspection_ros2

./: .clang-format  .gitignore  README.md  start_simulation.sh
.github/workflows/: ros2_build.yml
uav_control/: CMakeLists.txt  package.xml
uav_control/behavior_trees/: uav_inspection_tree.xml
uav_control/include/uav_control/behavior_trees/: check_defect_condition.hpp  goto_waypoint_action.hpp  hover_inspect_action.hpp  takeoff_action.hpp
uav_control/include/uav_control/planners/: trajectory_planner.hpp
uav_control/launch/: bringup.launch.py
uav_control/src/: goto_waypoint_action.cpp  offboard_control.cpp  takeoff_action.cpp  tree_executor.cpp
uav_control/src/behavior_trees/: check_defect_condition.cpp  goto_waypoint_action.cpp  hover_inspect_action.cpp  takeoff_action.cpp
uav_control/src/planners/: planner_demo.cpp  trajectory_planner.cpp
uav_control/test/: test_trajectory_planner.cpp
uav_vision/: CMakeLists.txt  package.xml
uav_vision/include/uav_vision/detectors/: i_detector.hpp
uav_vision/include/uav_vision/detectors/dnn/: dnn_detector.hpp
uav_vision/include/uav_vision/detectors/mock/: defect_detector.hpp
uav_vision/include/uav_vision/detectors/tflite/: tflite_detector.hpp
uav_vision/include/uav_vision/ros_nodes/: camera_subscriber.hpp
uav_vision/src/demos/: vision_demo.cpp
uav_vision/src/detectors/: defect_detector.cpp  dnn_detector.cpp
uav_vision/src/detectors/dnn/: dnn_detector.cpp
uav_vision/src/detectors/mock/: defect_detector.cpp
uav_vision/src/detectors/tflite/: tflite_detector.cpp
uav_vision/src/ros_nodes/: camera_subscriber.cpp  vision_main.cpp
